[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "portray"
version = "0.0.1"
description = "Converts text to image"
dependencies = [
    "numpy",
    "click",
    "pytest",
    "pandas",
    "matplotlib",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-coverage",
    "flake8",
    "mypy",
    "isort",
]

[project.scripts]
tti = "portray.__main__:main"

[tool.setuptools.packages]
find = {}
